--- a/src/components/New/New.css
+++ b/src/components/New/New.css
@@ -1,3 +1,47 @@
+.new {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  flex-wrap: wrap;
+  max-width: 550px;
+  opacity: 0.8;
+  border-radius: 6px;
+  border: solid 1px #979797;
+  background-color: #fff;
+}
+.new a {
+  width: 100%;
+  font-size: 14px;
+  letter-spacing: 0.25px;
+  color: #3a3737;
+  text-decoration: none;
+  padding-left: 20px;
+  margin-right: 16px;
+}
+.new .autor {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
 .favouriteButton {
+  width: 68px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: #f5f5f5;
+  border-radius: 6px;
+  font-size: 24px;
   color: red;
+}
+
+@media screen and (min-width: 500px) {
+  .favouriteButton {
+    height: 90px;
+  }
+  .new a {
+    width: 60%;
 }
