--- a/src/components/New/New.css
+++ b/src/components/New/New.css
@@ -1,10 +1,7 @@
 .new {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   position: relative;
-  flex-wrap: wrap;
-  max-width: 550px;
+  display: flex;
+  width: 550px;
   opacity: 0.8;
   border-radius: 6px;
   border: solid 1px #979797;
@@ -27,11 +24,11 @@
 }
 .favouriteButton {
   width: 68px;
-  height: 50px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   background-color: #f5f5f5;
   border-radius: 6px;
   font-size: 24px;
@@ -42,6 +39,4 @@
   .favouriteButton {
     height: 90px;
   }
-  .new a {
-    width: 60%;
 }
