--- a/src/components/NewsGrid/NewsGrid.css
+++ b/src/components/NewsGrid/NewsGrid.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-top: 50px;
   align-items: center;
   gap: 30px 18px;
 }
